Display 'Total users' on stats page

--- a/src/main/webapp/stats.html
+++ b/src/main/webapp/stats.html
@@ -16,6 +16,8 @@
 
         const messageCountElement = buildStatElement('Message count: ' + stats.messageCount);
         statsContainer.appendChild(messageCountElement);
+        const userCountElement = buildStatElement('User count: ' + stats.userCount);
+        statsContainer.appendChild(userCountElement);
       });
     }
 
