--- a/src/main/webapp/stats.html
+++ b/src/main/webapp/stats.html
@@ -32,10 +32,15 @@
   </script>
 </head>
 <body onload="buildUI()">
-<div id="content">
-  <h1>Site Statistics</h1>
-  <hr/>
-  <div id="stats-container">Loading...</div>
-</div>
+  <nav>
+    <ul id="navigation">
+      <li><a href="/">Home</a></li>
+    </ul>
+  </nav>
+  <div id="content">
+    <h1>Site Statistics</h1>
+    <hr/>
+    <div id="stats-container">Loading...</div>
+  </div>
 </body>
 </html>
