--- a/src/main/webapp/starbucks-map.html
+++ b/src/main/webapp/starbucks-map.html
@@ -7,12 +7,12 @@
     function createStarbucksMap(){
       fetch('/starbucks-map').then(function(response) {
         return response.json();
-      }).then((Starbucks) => {
+      }).then((starbucksArray) => {
         const map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: 40.7128, lng: -74.0060},
           zoom: 14
         });
-        Starbucks.forEach((Starbucks) => {
+        starbucksArray.forEach((Starbucks) => {
           addLandmark(map, Starbucks.lat, Starbucks.lng, Starbucks.storeNumber);
         });
       });
