--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -22,8 +22,10 @@ limitations under the License.
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/user-page.css">
     <script src="/js/user-page-loader.js"></script>
+    <script src="https://cdn.ckeditor.com/ckeditor5/11.2.0/classic/ckeditor.js"></script>
   </head>
   <body onload="buildUI();">
+    <!--ClassicEditor.create( document.getElementById('message-input') );-->
     <nav>
       <ul id="navigation">
         <li><a href="/">Home</a></li>
@@ -46,8 +48,6 @@ limitations under the License.
       <input type="submit" value="Submit">
     </form>
     <hr/>
-
     <div id="message-container">Loading...</div>
-
   </body>
 </html>
