--- a/src/main/webapp/user-map.html
+++ b/src/main/webapp/user-map.html
@@ -7,7 +7,7 @@
 
     let map;
     let editMarker;
-    //Create a map that adds markers where clicked
+    // Create a map that adds markers where clicked
     function createMap(){
       map = new google.maps.Map(document.getElementById('map'), {
         center: {lat: 40.7308228, lng: -73.997332},
@@ -17,9 +17,10 @@
       map.addListener('click', (event) => {
         createMarkerForEdit(event.latLng.lat(), event.latLng.lng());
       });
+      fetchMarkers();ma
     }
 
-    //Displays markers created by users onto the map
+    // Displays markers created by users onto the map
     function fetchMarkers(){
       fetch('/user-markers').then((response) => {
         return response.json();
@@ -30,7 +31,7 @@
       });
     }
 
-    //Stores marker a user just created to Datastore
+    // Stores marker a user just created to Datastore
     function postMarker(lat, lng, content){
       const params = new URLSearchParams();
       params.append('lat', lat);
@@ -43,7 +44,7 @@
       });
     }
 
-    //Allow user to add data to the map
+    // Allow user to add data to the map
     function createMarkerForDisplay(lat, lng, content){
       const marker = new google.maps.Marker({
         position: {lat: lat, lng: lng},
@@ -58,7 +59,7 @@
       });
     }
 
-    //Actually creates the marker
+    // Actually creates the marker
     function createMarkerForEdit(lat, lng){
       //Allow only one marker at a time
       if (editMarker) { 
@@ -79,7 +80,7 @@
       infoWindow.open(map, editMarker);
     }
 
-    //Builds window for users to enter information
+    // Builds window for users to enter information
     function buildInfoWindowInput(lat, lng){
       const textBox = document.createElement('textarea');
       const button = document.createElement('button');
