--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -38,7 +38,7 @@ limitations under the License.
         <input type="submit" value="Submit">
       </form>
     </div>
-    <form id="message-form" method="POST" class="hidden" enctype="multipart/form-data">
+    <form id="message-form" action="/messages" method="POST" class="hidden">
       Enter a new message:
       <br/>
       <textarea name="text" id="message-input"></textarea>
