added label for recipient

--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -43,6 +43,7 @@ limitations under the License.
       <br/>
       <textarea name="text" id="message-input"></textarea>
       <br/>
+      <label for="recipient-input">To:</label>
       <input value="" name="recipient" id="recipient-input">
       <input type="submit" value="Submit">
     </form>
