linked css files to other pages, added navigation bar background to user-page, fixed background color of messages

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,10 +29,10 @@ limitations under the License.
       </ul>
     </nav>
     <h1 class="center">CodeU Starter Project</h1>
-    <p class="text center">This is the CodeU starter project. Click the links above to login and visit your page.
+    <p class="center">This is the CodeU starter project. Click the links above to login and visit your page.
     You can post messages on your page, and you can visit other user pages if you have
     their URL.</p>
-    <p class ="text center">This is your code now! Feel free to make changes, and don't be afraid to get creative!
+    <p class ="center">This is your code now! Feel free to make changes, and don't be afraid to get creative!
     You could start by modifying this page to tell the world more about your team.</p>
   </body>
 </html>
