--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -22,11 +22,12 @@ limitations under the License.
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/user-page.css">
     <script src="/js/user-page-loader.js"></script>
+    <script src="/js/navigation-loader.js"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/11.2.0/classic/ckeditor.js"></script>
   </head>
   <body onload="buildUI();">
     <nav>
-      <ul id="navigation">
+      <ul id="navigation" class="message-header">
         <li><a href="/">Home</a></li>
       </ul>
     </nav>
@@ -55,6 +56,6 @@ limitations under the License.
     <hr/>
 
     <div id="message-container">Loading...</div>
-    
+
   </body>
 </html>
