added submit button

--- a/src/main/webapp/event-form.html
+++ b/src/main/webapp/event-form.html
@@ -24,6 +24,8 @@
       <br>
       Location:<br>
       <input name="location">
+      <br><br>
+      <input type="submit" value="Submit">
     </form>
   </body>
 </html>
