--- a/src/main/webapp/event-list.html
+++ b/src/main/webapp/event-list.html
@@ -29,31 +29,32 @@
   }
   
   function buildEventDiv(event){
-    //For the event name
+   // For the event name
    const eventNameDiv = document.createElement('div');
    eventNameDiv.classList.add("left-align");
    eventNameDiv.appendChild(document.createTextNode(event.eventName));
 
-   //Organizers name
+   // Organizers name
    const organizerNamesDiv = document.createElement('div');
    organizerNamesDiv.classList.add("left-align");
    organizerNamesDiv.appendChild(document.createTextNode(event.organizerNames));
    
-   /**Will need some way to nicely format the date/time of the event later on*/
+   // Will need some way to nicely format the date/time of the event later on
    const dateDiv = document.createElement('div');
    dateDiv.classList.add('right-align');
-   dateDiv.appendChild(document.createTextNode(new Date(event.eventDate)));
+   dateDiv.appendChild(document.createTextNode(event.eventDate));
    
+   //Time of event
    const timeDiv = document.createElement('div');
    timeDiv.classList.add('right-align');
    timeDiv.appendChild(document.createTextNode(event.eventTime));
 
-   //Location of event
+   // Location of event
    const locationDiv = document.createElement('div');
    locationDiv.classList.add('right-align');
    locationDiv.appendChild(document.createTextNode(event.location));
 
-   //Group as one thing
+   // Group as one thing
    const headerDiv = document.createElement('div');
    headerDiv.classList.add('message-header');
    headerDiv.appendChild(eventNameDiv);
