--- a/src/main/webapp/event-list.html
+++ b/src/main/webapp/event-list.html
@@ -32,26 +32,46 @@
    // For the event name
    const eventNameDiv = document.createElement('div');
    eventNameDiv.classList.add("left-align");
+   var nameLabel = document.createElement("LABEL");
+   nameLabel.setAttribute("for", "event-name");
+   nameLabel.appendChild(document.createTextNode("Event Name: "));
+   eventNameDiv.appendChild(nameLabel);
    eventNameDiv.appendChild(document.createTextNode(event.eventName));
 
    // Organizers name
    const organizerNamesDiv = document.createElement('div');
    organizerNamesDiv.classList.add("left-align");
+   var organizersLabel = document.createElement("LABEL");
+   organizersLabel.setAttribute("for", "event-organizers");
+   organizersLabel.appendChild(document.createTextNode("Organizers: "));
+   organizerNamesDiv.appendChild(organizersLabel);
    organizerNamesDiv.appendChild(document.createTextNode(event.organizerNames));
    
    // Will need some way to nicely format the date/time of the event later on
    const dateDiv = document.createElement('div');
    dateDiv.classList.add('right-align');
+   var dateLabel = document.createElement("LABEL");
+   dateLabel.setAttribute("for", "event-date");
+   dateLabel.appendChild(document.createTextNode("Date: "));
+   dateDiv.appendChild(dateLabel);
    dateDiv.appendChild(document.createTextNode(event.eventDate));
    
    //Time of event
    const timeDiv = document.createElement('div');
    timeDiv.classList.add('right-align');
+   var timeLabel = document.createElement("LABEL");
+   timeLabel.setAttribute("for", "event-time");
+   timeLabel.appendChild(document.createTextNode("Time: "));
+   timeDiv.appendChild(timeLabel);
    timeDiv.appendChild(document.createTextNode(event.eventTime));
 
    // Location of event
    const locationDiv = document.createElement('div');
    locationDiv.classList.add('right-align');
+   var locationLabel = document.createElement("LABEL");
+   locationLabel.setAttribute("for", "event-location");
+   locationLabel.appendChild(document.createTextNode("Location: "));
+   locationDiv.appendChild(locationLabel);
    locationDiv.appendChild(document.createTextNode(event.location));
 
    // Group as one thing
