--- a/src/main/webapp/event-list.html
+++ b/src/main/webapp/event-list.html
@@ -9,7 +9,8 @@
     
   // Fetch messages and add them to the page.
   function fetchEvents(){
-    const url = "/event-list";
+    const urlParams = new URLSearchParams(location.search);
+    const url = "/event-list?" + urlParams;
     fetch(url).then((response) => {
       return response.json();
     }).then((events) => {
