Event Form and Event List did not have links to home page

--- a/src/main/webapp/event-form.html
+++ b/src/main/webapp/event-form.html
@@ -8,7 +8,7 @@
   <body onload="addLoginOrLogoutLinkToNavigation();">
     <nav>
       <ul id="navigation">
-        <li><a href="/event-form.html">Event Form</a></li>
+        <li><a href="/">Home</a></li>
       </ul>
     </nav>
     <h2>Create your event!</h2>
