--- a/src/main/webapp/event-list.html
+++ b/src/main/webapp/event-list.html
@@ -10,7 +10,7 @@
 <body onload="addLoginOrLogoutLinkToNavigation(); buildUI();">
   <nav>
     <ul id="navigation">
-      <li><a href="/event-list.html">Event List</a></li>
+      <li><a href="/">Home</a></li>
     </ul>
   </nav>
  <div id="content">
