--- a/src/main/webapp/event-list.html
+++ b/src/main/webapp/event-list.html
@@ -19,6 +19,7 @@
   <hr/>
   <h3>Tags:</h3>
   <div id="tag-container">Loading tags...</div>
+  <h3>Events:</h3>
   <div id="event-container">Loading...</div>
  </div>
 </body>
