--- a/src/main/webapp/event-form.html
+++ b/src/main/webapp/event-form.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/navigation-loader.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </head>
   <body onload="addLoginOrLogoutLinkToNavigation();">
     <nav>
@@ -11,25 +14,39 @@
         <li><a href="/">Home</a></li>
       </ul>
     </nav>
-    <h2>Create your event!</h2>
+    <h3>Create your event!</h3>
     <form action="/event-form" method="POST">
-      Name:<br>
-      <input name="eventName">
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input class="mdl-textfield__input" type="text" id="eventName" name="eventName">
+        <label class="mdl-textfield__label" for="eventName">Name:</label>
+      </div>
       <br>
-      Description:<br>
-      <input name="description">
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input class="mdl-textfield__input" type="text" id="description" name="description">
+        <label class="mdl-textfield__label" for="description">Description:</label>
+      </div>
       <br>
-      Organizer(s):<br>
-      <input name="organizerNames">
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input class="mdl-textfield__input" type="text" id="organizerNames" name="organizerNames">
+        <label class="mdl-textfield__label" for="organizerNames">Organizer(s):</label>
+      </div>
       <br>
-      Date:<br>
-      <input name="eventDate">
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input class="mdl-textfield__input" type="text" id="eventDate" pattern="[0-9/b]+" name="eventDate">
+        <label class="mdl-textfield__label" for="eventDate">Date:</label>
+        <span class="mdl-textfield__error">ex. 4/18/19</span>
+      </div>
       <br>
-      Time:<br>
-      <input name="eventTime">
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input class="mdl-textfield__input" type="text" id="eventTime" pattern="[0-9,:,p,m,a,M,P,A]+" name="eventTime">
+        <label class="mdl-textfield__label" for="eventTime">Time:</label>
+        <span class="mdl-textfield__error">ex.6:00pm</span>
+      </div>
       <br>
-      Location:<br>
-      <input name="location">
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input class="mdl-textfield__input" type="text" id="location" name="location">
+        <label class="mdl-textfield__label" for="location">Location:</label>
+      </div>
       <br><br>
       <input type="submit" value="Submit">
     </form>
