--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,23 +16,27 @@ limitations under the License.
 
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title class = "text center">CodeU 2019 Starter Project</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <script src="/js/navigation-loader.js"></script>
-  </head>
-  <body onload="addLoginOrLogoutLinkToNavigation();">
-    <nav>
-      <ul id="navigation">
-        <li><a href="/">Home</a></li>
-      </ul>
-    </nav>
-    <h1 class="center">CodeU Starter Project</h1>
-    <p class="center">This is the CodeU starter project. Click the links above to login and visit your page.
-    You can post messages on your page, and you can visit other user pages if you have
-    their URL.</p>
-    <p class ="center">This is your code now! Feel free to make changes, and don't be afraid to get creative!
-    You could start by modifying this page to tell the world more about your team.</p>
-  </body>
+<head>
+  <title>Event List</title>
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/user-page.css">
+  <script src="/js/navigation-loader.js"></script>
+  <script src="/js/event-div-creator.js"></script>
+  <script src="/js/tag-box-creator.js"></script>
+</head>
+<body onload="addLoginOrLogoutLinkToNavigation(); buildTagBox(); buildUI();">
+  <nav>
+    <ul id="navigation">
+      <li><a href="/">Home</a></li>
+    </ul>
+  </nav>
+ <div id="content">
+  <h1>Event List</h1>
+  <hr/>
+  <h3>Tags:</h3>
+  <div id="tag-container">Loading tags...</div>
+  <h3>Events:</h3>
+  <div id="event-container">Loading...</div>
+ </div>
+</body>
 </html>
