Event description is now a textarea box

--- a/src/main/webapp/event-form.html
+++ b/src/main/webapp/event-form.html
@@ -17,7 +17,7 @@
       <input name="eventName">
       <br>
       Description:<br>
-      <input name="description">
+      <textarea rows="4" cols="18" name="description"></textarea>
       <br>
       Organizer(s):<br>
       <input name="organizerNames">
